# TurboQuant-eval

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: kv_fidelity.yaml  longbench_polar.yaml  longbench_qjl.yaml
memory/: third_party_turboquant_pytorch_changes_20260408.md  vdb-sandbox_turboquant_changes_20260408.md
raw/: README.md
raw/benchmarks/: README.md
raw/benchmarks/ann-bench/: README.md
raw/benchmarks/ann-bench/hnsw/result/20260408_compare_hnswflat_wide/: results.json
raw/benchmarks/ann-bench/hnsw/result/20260408_compare_hnswsq_bf16_wide/: results.json
raw/benchmarks/ann-bench/ivf/result/20260408_compare_ivfsq_bf16_wide/: results.json
raw/legacy-memory/: 2026-04-08-third-party-turboquant-pytorch-changes.md  2026-04-08-vdb-sandbox-turboquant-changes.md  README.md
scripts/: run_kv_eval.sh  run_polar_longbench.sh  run_qjl_longbench.sh  setup_external.sh
turboquant_eval/: __init__.py  results.py
turboquant_eval/backends/: __init__.py  base.py  common.py  polar_official.py  qjl_official.py  turboquant_ref.py
turboquant_eval/runners/: run_backend.py
turboquant_eval/tasks/: __init__.py  kv_fidelity.py
wiki/: index.md  log.md  overview.md
wiki/comparisons/: ann-methods-dbpedia-1m.md
wiki/concepts/: amx-bf16-optimization.md  fused-search-materialization.md
wiki/entities/: turboquant-eval.md
wiki/sources/: ann-bench-result-bundles-2026-04-08.md  repo-readme.md  third-party-turboquant-pytorch-changes-2026-04-08.md  vdb-sandbox-turboquant-changes-2026-04-08.md
(+5 files in other folders)
