[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-eval"
version = "0.1.0"
description = "Unified evaluation scaffold for QJL, PolarQuant, and TurboQuant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.26",
  "torch>=2.1"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["turboquant_eval*"]
